// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly for desktop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    color: red;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box"
/>
`;

exports[`props should render correctly for fullHD 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width: 1200px) and (max-width: 1439px) {
  .emotion-2 {
    color: red;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box"
/>
`;

exports[`props should render correctly for max-tablet 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    color: red;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box"
/>
`;

exports[`props should render correctly for min-desktop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    color: red;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box"
/>
`;

exports[`props should render correctly for mobile 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width: 0px) and (max-width: 479px) {
  .emotion-2 {
    color: red;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box"
/>
`;

exports[`props should render correctly for tablet 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-2 {
    color: red;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box"
/>
`;

exports[`props should render correctly for widescreen 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width: 1024px) and (max-width: 1199px) {
  .emotion-2 {
    color: red;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box"
/>
`;
